solc_ossfuzz_seed_corpus/test_solidity/test_d58d22f37636f9f32e88cfe4e6ec8b7104b01c862bd5e81fe9b7493ea6a17ce9_25e681a7843485513125afcc23c3a4fb140f4bb9_sol.sol
==== Source:  ====

==== Source: su0.sol ====
library L0 {
  enum EN0 {
    M0, M1, M2, M3, M4, M5, M6, M7,
    M8, M9, M10, M11, M12, M13, M14, M15,
    M16, M17
  }
  event ev0(address  ep0);
  error er0(address payable ep0);
  type T0 is int64;
  bool public constant cons0 = (!((bytes7(0xffffffffffffff) >= (((!(false)) ? bytes7(0xffffffffffffff) : bytes7(0xffc50577211c77)) | bytes7(0xffffffffffffff)))));
  event ev1();
  function f0(uint16 i0,uint200 i1,bool i2) external   
  {
  }
  modifier m0() 
  {
    emit ev0(address(0x0000000000000000000000000000000000000006));
    do
    {
      unchecked {
        do
        {
          continue;
        }
        while (false);
        continue;
        bytes16[] memory l0 = new bytes16[](1);
        if (false)
        {
        }
      }
      if (((~(((~(((int256(57896044618658097711785492504343953926634992332820282019728792003956564819967) | int256(0)) & int256(57896044618658097711785492504343953926634992332820282019728792003956564819967)))) | int256(57896044618658097711785492504343953926634992332820282019728792003956564819967)))) < int256(49894984526720558897002425128825446689634033024715426951514930317338946703159)))
      {
        _;
      }
      else if (((false || false) && (false && false)))
      {
      }
      else
      {
        _;
      }
    }
    while (true);
    address payable l1 = payable(address(0x0000000000000000000000000000000000000004));
  }
  L0.EN0 public constant cons1 = L0.EN0.M5;
  modifier m1() 
  {
    assembly
    {
      {
        mstore(mod(cons0, 2048), 41494044448865583494920408971316747655003611969170218904418682870470021114076)
        return(52799066212974414791166969550636890614256820053947181314867043287181389581418, cons0)
      }
    }
    _;
    bytes11 l0 = bytes11(0xffffffffffffffffffffff);
  }
}
error er1();
type T1 is bytes9;
uint88 constant cons2 = uint88(((((((uint88(309485009821345068724781055) ** uint40(uint40(1099511627775))) + uint88(0)) - uint88(151982911814339951615702817)) << uint232(uint232(3414001814862722505777534277295062528296693134461409128269601982558105))) << uint96(uint96(79228162514264337593543950335))) / uint88(309485009821345068724781055)));
pragma solidity >= 0.0.0;
contract C0 {
  bool public constant cons3 = false;
  enum EN1 {
    M0, M1, M2, M3, M4, M5, M6, M7,
    M8, M9, M10, M11, M12, M13, M14, M15,
    M16, M17, M18, M19, M20, M21, M22, M23,
    M24, M25, M26, M27, M28, M29, M30, M31,
    M32, M33, M34, M35, M36, M37, M38, M39,
    M40, M41, M42, M43, M44, M45, M46, M47,
    M48, M49, M50, M51, M52, M53, M54, M55,
    M56, M57, M58, M59, M60, M61, M62, M63,
    M64, M65, M66, M67, M68, M69, M70, M71,
    M72, M73, M74, M75, M76, M77, M78, M79,
    M80, M81, M82, M83, M84, M85, M86, M87,
    M88, M89, M90, M91, M92, M93, M94, M95,
    M96, M97, M98, M99, M100, M101, M102, M103,
    M104, M105, M106, M107, M108, M109, M110, M111,
    M112, M113, M114, M115, M116, M117, M118, M119,
    M120, M121, M122, M123, M124, M125, M126, M127,
    M128, M129, M130, M131, M132, M133, M134, M135,
    M136, M137, M138, M139, M140, M141, M142, M143,
    M144, M145, M146, M147, M148, M149, M150, M151,
    M152, M153, M154, M155, M156, M157, M158, M159,
    M160, M161, M162, M163, M164, M165, M166, M167,
    M168, M169, M170, M171, M172, M173, M174, M175,
    M176, M177
  }
  error er2(function (C0.EN1) external   ep0);
  using L0 for *;
  string   s0 = "ffffffffffffffffffffffffffffffff000000000000000000000000000000000000000000000000000000000000";
  modifier m2(int136 i0) virtual
  {
    _;
    address payable l0 = payable(address(this));
  }
  error er3();
  type T2 is int216;
}
// ----
// TypeError 7615: (su0.sol:1503-1508): Only direct number constants and references to such constants are supported by inline assembly.
// TypeError 7615: (su0.sol:1690-1695): Only direct number constants and references to such constants are supported by inline assembly.
// Warning 3149: (su0.sol:1842-2058): The result type of the shift operation is equal to the type of the first operand (uint88) ignoring the (larger) type of the second operand (uint232) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
// Warning 3149: (su0.sol:1841-2108): The result type of the shift operation is equal to the type of the first operand (uint88) ignoring the (larger) type of the second operand (uint96) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
